<resources>
    <string name="app_name">Weather</string>
    <string name="enter_city_name">Enter City Name</string>
    <string name="search">Search</string>
    <string name="degree_celsius_symbol">°C</string>
    <string name="description_weather_condition_icon">weather condition icon</string>
    <string name="label_humidity">Humidity</string>
    <string name="label_pressure">Pressure</string>
    <string name="label_visibility">Visibility</string>
    <string name="no_data_found">No data Found</string>
    <string name="server_error">Server Error</string>
</resources>